--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -58,7 +58,7 @@ body{
     cursor: pointer;
     box-shadow: 0 0 1px #000;
     position: absolute;
-    top: 0 !important;
+    top: 8px !important;
     /* display: none; */
 }
 
@@ -618,7 +618,7 @@ opacity: 1;
     padding: 6px 20px;
 }
 .container-fluid{
-    width: 94%!important;
+    width: 960px!important;
 }
 hr{
     background-color: #a19d9d;
@@ -751,6 +751,11 @@ hr{
 @media only screen and (min-width:320px) {
     .container-fluid{
         padding:0;
+    }
+}
+@media (min-width: 1280px){
+    .container-fluid {
+        width: 1203px!important;
     }
 }
 
