--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -7,6 +7,12 @@ a:hover {
   color: #03AC0E;
   text-decoration: none;
 }
+.fixed-navbar{
+  position: fixed;
+  top:0;
+  width: 100%;
+  z-index: 99;
+}
 
 .top-bar {
   background: #F3F4F5;
@@ -33,8 +39,8 @@ a:hover {
 }
 
 .nav-bar {
-    margin: 1rem 0 0 0;
   padding: .5rem;
+  background-color: #fff;
 }
 
 .nav-bar-title h3 {
