--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -19,7 +19,7 @@ body{
     position: relative;
     display: block;
     width: 100%;
-    margin: 0px 0px 40px;
+    margin: 0px 0px 20px;
     transition: background 0.5s ease 0s;
     /* background-color: #d9d9d9; */
 }
@@ -98,7 +98,7 @@ body{
 }
 
 .slick-slide {
-margin: 0px 20px;
+margin: 0px;
 }
 
 .slick-slide img {
@@ -123,12 +123,21 @@ opacity: .5;
 .slick-current {
 opacity: 1;
 }
+.slick-prev:before, .slick-next:before{
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s, opacity 0.5s linear;
+}
+#main-slider:hover .slick-prev:before, #main-slider:hover .slick-next:before{
+    visibility: visible;
+    opacity: 1;
+}
 .slick-prev{
-    left: 25px;
+    left: 20px;
     z-index: 2;
 }
 .slick-next{
-    right: 25px;
+    right: 35px;
 }
 #owl-two .nav-button{
     top: 16px !important;
@@ -557,11 +566,11 @@ opacity: 1;
 }
 .item-badge .success{
     display: inline-block;
-    background-color: rgb(214, 255, 222);
     border-radius: 3px;
     font-weight: bold;
     font-size: 0.714286rem;
     color: rgb(3, 172, 14);
+    background-color: rgb(218, 245, 219);
     line-height: 1.4;
     letter-spacing: normal;
     margin-bottom: 4px;
@@ -636,6 +645,13 @@ opacity: 1;
 }
 
 /*CUSTOM CSS ORI */
+.btn-success{
+    background-color: #03AC0E!important;
+}
+.btn:hover{
+    box-shadow: none;
+    background-color: #029e0d!important;
+}
 .paginate-first{
     text-decoration: none;
     text-align: center;
