--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -13,6 +13,9 @@ a:hover {
   width: 100%;
   z-index: 99;
 }
+.shadow-nav{
+  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 7%);
+}
 
 .top-bar {
   background: #F3F4F5;
@@ -29,7 +32,7 @@ a:hover {
 }
 
 .top-bar-item {
-  margin: 0 1rem;
+  margin: 0 8px;
 }
 
 .top-bar-item.right {
@@ -69,16 +72,20 @@ a:hover {
 
 .search-recommendations a {
   padding: 8px;
-  font-size: .9rem;
 }
 
 .nav-bar-misc {
   text-align: center;
 }
 
-.nav-bar-misc i {
-  font-size: 1.2rem;
-  padding: .2rem;
+.nav-bar-misc a i {
+  font-size: 1rem;
+  padding: 10px;
+  color: #6c727c;
+}
+.nav-bar-misc a i:hover{
+  background-color: #f2f2f2;
+  border-radius: 4px;
 }
 
 .nav-bar-profile {
@@ -93,11 +100,12 @@ a:hover {
 }
 
 .btn-store {
-  background: #E4E4E4;
+  background: rgba(0, 0, 0, 0);
+  font-size: .8rem;
 }
 
 .btn-profile {
-  background: #80AEC6;
+  background: rgba(0, 0, 0, 0);
 }
 
 .body {
@@ -115,8 +123,7 @@ a:hover {
 }
 
 .profile-card-seperator {
-  margin: 1rem 0;
-  border-top: .1px solid grey;
+  border-top: .1px solid rgb(218, 218, 218);
 }
 
 .btn-collapse {
