--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -198,6 +198,20 @@ body {
     white-space: nowrap;
     max-width: 350px;
 }
+.ellipsis-200{
+    display: block;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    max-width: 200px;
+}
+.ellipsis-80{
+    display: block;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    max-width: 80px;
+}
 .chat-desc{
     width: 154px;
 }
@@ -274,6 +288,9 @@ body {
 
 .h-300{
     height: 300px;
+}
+.h-350{
+    height: 350px;
 }
 
 .fc-text {
@@ -385,9 +402,126 @@ body {
 .w-max {
     width: max-content;
 }
+.w-400-px{
+    width: 400px;
+}
+.w-200-px{
+    width: 200px;
+}
+.w-300-px{
+    width: 300px;
+}
 
 
 /* PARENT */
+.dot-red{
+    width: 8px;
+    height: 8px;
+    background-color: #D00A1A;
+    border-radius: 50px;
+}
+.icon-notification{
+    position: absolute;
+    top:0;
+    right:-4px;
+    padding: 0px 4.5px;
+    background-color: #D00A1A;
+    color:#fff;
+    border-radius: 50px;
+    font-size: 7pt;
+}
+.icon-notification-sub{
+    position: absolute;
+    top:12px;
+    right:12px;
+    padding: 0px 4.5px;
+    background-color: #D00A1A;
+    color:#fff;
+    border-radius: 50px;
+    font-size: 7pt;
+}
+.dropdown-custom{
+    position: relative; 
+    display: inline-block;
+    border-radius: 4px;
+    cursor: pointer;
+}
+.dropdown-custom:hover{
+    background-color: #f1f1f1;
+}
+.dropdown-custom:hover .content-dropdown-custom{
+    display: block;
+}
+.dropdown-custom:hover .content-dropdown-custom-right{
+    display: block;
+}
+
+.btn-dropdown-custom{
+    padding:8px;
+    color: #707070;
+}
+.bg-content-dropdown{
+    background-color: rgba(0, 0, 0, 0.7);
+    opacity: 0;
+    position: fixed;
+    inset: 110px 0px 0px;
+    z-index: 10;
+    will-change: opacity;
+    transform: translate3d(0px, 0px, 0px);
+    transition: opacity 200ms ease 0ms;
+}
+.content-dropdown-custom{
+    cursor: default;
+    display: none;
+    position: absolute;
+    right: auto;
+    left: 50%;
+    -webkit-transform: translate(-50%, 0);
+    -o-transform: translate(-50%, 0);
+    transform: translate(-50%, 0);
+    top:30px;
+    background-color: #fff;
+    box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.2);
+    z-index: 99;
+    border-radius: 0 0 12px 12px;
+    -webkit-transition: all .3s .1s;
+    -moz-transition: all .3s .1s;
+    -o-transition: all .3s .1s;
+    transition: all .1s;
+}
+.content-dropdown-custom-right{
+    cursor: default;
+    display: none;
+    position: absolute;
+    right: auto;
+    left: -62%;
+    -webkit-transform: translate(-50%, 0);
+    -o-transform: translate(-50%, 0);
+    transform: translate(-50%, 0);
+    top:30px;
+    background-color: #fff;
+    box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.2);
+    z-index: 99;
+    border-radius: 0 0 12px 12px;
+    -webkit-transition: all .3s .1s;
+    -moz-transition: all .3s .1s;
+    -o-transition: all .3s .1s;
+    transition: all .1s;
+}
+
+.content-dropdown-custom a.drop-link{
+    padding:4px 8px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+    margin: 6px;
+    color: #000;
+}
+.content-dropdown-custom a.drop-link:hover{
+    background-color: #f1f1f1;
+    color: #000;
+    border-radius: 4px;
+}
 .line-register{
     text-align: center;
     display: flex;
